[package]
authors = ["the rp-rs team", "René Ladan <rene0+github@freedom.nl>"]
description = "DCF77 and NPL receiver on a Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rene0/rp-rs-radio-clock"
edition = "2021"
readme = "README.md"
name = "rp-rs-radio-clock"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3"
hd44780-driver = "0.4"
heapless = "0.7"
panic-halt = "0.2"

# Hardware-independent
dcf77_utils = "0.3.1"
npl_utils = "0.2.0"
radio_datetime_utils = "0.4.2"

# We're using a Pico by default on this template
rp-pico = "0.6"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
