[package]
authors = ["the rp-rs team", "René Ladan <rene0+github@freedom.nl>"]
description = "DCF77 and NPL receiver on a Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rene0/rp-rs-radio-clock"
edition = "2021"
readme = "README.md"
name = "rp-rs-radio-clock"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3"
hd44780-driver = "0.4"
heapless = "0.7"
panic-halt = "0.2"

# Hardware-independent
dcf77_utils = "0.4.0"
npl_utils = "0.2.1"
radio_datetime_utils = "0.4.2"

rp-pico = "0.6"
