[package]
authors = ["the rp-rs team", "René Ladan <rene0+github@freedom.nl>"]
description = "DCF77 and MSF receiver on a Raspberry Pi Pico"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rene0/rp-rs-radio-clock"
edition = "2021"
readme = "README.md"
name = "rp-rs-radio-clock"
version = "0.1.1"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt-rtt = "0.4"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3"
hd44780-driver = "0.4"
heapless = "0.8"
panic-halt = "0.2"

rp-pico = "0.8"

# Hardware-independent
dcf77_utils = "0.6"
msf60_utils = "0.3"
radio_datetime_utils = "0.5"
